--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Secciones del contenido -->
         <section class="section">
             <h2>Resumen Profesional</h2>
-            <p>rofesional con más de 10 años de experiencia combinada en diseño gráfico, manejo de redes sociales, desarrollo web y enseñanza en informática. Especialista en crear contenido visual atractivo, gestionar comunidades digitales y capacitar a adultos y docentes en tecnologías informáticas. Apasionado por implementar soluciones creativas y eficaces que impulsan la comunicación digital y el aprendizaje.</p>
+            <p>Profesional con más de 10 años de experiencia combinada en diseño gráfico, manejo de redes sociales, desarrollo web y enseñanza en informática. Especialista en crear contenido visual atractivo, gestionar comunidades digitales y capacitar a adultos y docentes en tecnologías informáticas. Apasionado por implementar soluciones creativas y eficaces que impulsan la comunicación digital y el aprendizaje.</p>
         </section>
 
         <section class="section">
