--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             
             <div class="experiencia">
                 <h3>Encargado del Área Tecnológica</h3>
-                <p><strong>Colegio Santo Domingo CSD</strong> | 2018 - Actualidad</p>
+                <p><strong>Colegio Santo Domingo CSD</strong> | 2018 - 2022</p>
                 <ul>
                     <li>Resolución de problemas de software y hardware.</li>
                     <li>Capacitación técnica en herramientas digitales para personal administrativo y docente.</li>
